add measurement results to the paper

--- a/BadVoltageSensors/paper/src/main.tex
+++ b/BadVoltageSensors/paper/src/main.tex
@@ -34,7 +34,7 @@
     \newpage
 
     \section{Abstract}\label{sec:abstract}
-    It`s contents should be too abstract for me to be able to write it.
+    The contents of this section should be too abstract for me to be able to write it.
 
     \section{Experiments}\label{sec:experiments}
     There were 4 experiments arranged:
@@ -126,6 +126,21 @@
 
     \section{Measurement Results}\label{sec:measurement-results}
 
+    We`re neglecting the inaccuracy of the pre-determined upper device measurement limit which is written on those devices.
+    It`s inaccuracy is pretty low!
+
+    \begin{equation*}
+        A_1 = \left( \left(0.6 \pm 0.07 \right) Ampere \right) \times \frac{15.8}{2000} = \left(4.7 \pm 0.6 \right) milliAmpere
+    \end{equation*}
+    \begin{equation*}
+        V_1 = \left( \left(3.25 \pm 0.1 \right) Volt \right) \times \frac{6.1}{6} = \left(3.30 \pm 0.1 \right) Volt
+    \end{equation*}
+    \begin{equation*}
+        V_2 = \left( \left(3.7 \pm 0.1 \right) Volt \right) \times \frac{6.1}{6} = \left(3.76 \pm 0.1 \right) Volt
+    \end{equation*}
+    \begin{equation*}
+        A_3 = \left( \left(1.8 \pm 0.07 \right) Ampere \right) \times \frac{15.8}{2000} = \left(14.22 \pm 0.6 \right) milliAmpere
+    \end{equation*}
 
 
     \section{The Answer}\label{sec:answer}
