add pictures for schemes and plug them to the paper

--- a/BadVoltageSensors/paper/src/main.tex
+++ b/BadVoltageSensors/paper/src/main.tex
@@ -12,7 +12,7 @@
 \usepackage{setspace}
 % \usepackage[margin=1.0in]{geometry}
 
-\title{On non-ideal voltage and current measurement tools}
+\title{\textbf{\Huge{On non-ideal voltage and current measurement tools}}}
 \date{26.09.2020}
 \author{Latipov Vladimir \&\& Onishenko Sergiy}
 
@@ -34,19 +34,22 @@
     \newpage
 
     \section{Abstract}\label{sec:abstract}
+
+    \begin{center}
     The contents of this section should be too abstract for me to be able to write it.
+    \end{center}
 
     \section{Experiments}\label{sec:experiments}
-    There were 4 experiments arranged:
+    There were 3 experiments and 4 measurements arranged:
 
-        \subsection{Experiment \textnumero1: Sequential plugging in}\label{subsec:experiment-1} % \Romannum{1}
-    \includegraphics[width=\linewidth]{images/schemes/scheme0.png}
+    \subsection{Experiment \textnumero1: Sequential plugging in}\label{subsec:experiment-1} % \Romannum{1}
+    \includegraphics[width=\linewidth]{images/schemes/Sequential.png}
 
     \subsection{Experiment \textnumero2: Only Voltmeter}\label{subsec:experiment-2}
-    \includegraphics[width=\linewidth]{images/schemes/scheme0.png}
+    \includegraphics[width=\linewidth]{images/schemes/OnlyVoltmeter.png}
 
     \subsection{Experiment \textnumero3: Only Ampermeter}\label{subsec:experiment-3}
-    \includegraphics[width=\linewidth]{images/schemes/scheme0.png}
+    \includegraphics[width=\linewidth]{images/schemes/OnlyAmperemeter.png}
 
 
     \section{Solving equation system}\label{sec:solving-equation-system}
