--- a/BadVoltageSensors/paper/src/main.tex
+++ b/BadVoltageSensors/paper/src/main.tex
@@ -2,7 +2,7 @@
 %! Date = 26.09.2020
 
 % Preamble
-\documentclass[12pt]{article}
+\documentclass[12pt]{memoir}
 
 % Packages
 \usepackage{amsmath}
@@ -30,11 +30,15 @@
 
     \newpage
 
-    \section{Abstract}\label{sec:abstract}
 
+    \begin{vplace}
     \begin{center}
+
+    \section{Abstract}\label{sec:abstract}
     The contents of this section should be too abstract for me to be able to write it.
+
     \end{center}
+    \end{vplace}
 
     \newpage
 
