add new formula

--- a/BadVoltageSensors/paper/src/main.tex
+++ b/BadVoltageSensors/paper/src/main.tex
@@ -174,12 +174,12 @@
 
 
     \section{The Answer}\label{sec:answer}
-So, the impedance values are the following:
+So, the impedance and voltage values are the following:
 
-$R_v = 1$
-$R_e = 1$
-$R_A = 1$
-$\varepsilon = 1$
+$R_v = 697. Ohm$
+$R_e = 749. Ohm$
+$R_A = 200. Ohm$
+$\varepsilon = 7.8 Volts$
 
 
 
