add solution validation and mention it in the paper

--- a/BadVoltageSensors/paper/src/main.tex
+++ b/BadVoltageSensors/paper/src/main.tex
@@ -213,8 +213,8 @@
     \section{Conclusion}\label{sec:conclusion}
     Unfortunately, there are many computations required to find the answer, which decrease the accuracy of it.\newline
     However, the answer itself seems to me reasonable.\newline
-    As expected, the quality of the devices leaves much to be desired\ldots
-
+    As expected, the quality of the devices leaves much to be desired\ldots\newline
+    There can be no errors with equation solving because their solutions are perfectly validated.
 
 
 \end{document}
