remove redundant .idea folder

--- a/BadVoltageSensors/paper/src/main.tex
+++ b/BadVoltageSensors/paper/src/main.tex
@@ -214,6 +214,7 @@
     Unfortunately, there are many computations required to find the answer, which decrease the accuracy of it.\newline
     However, the answer itself seems to me reasonable.\newline
     As expected, the quality of the devices leaves much to be desired\ldots\newline
+    However, it's quite suspicious that there is a bit too high resistance of the battery.\newline
     There can be no errors with equation solving because their solutions are perfectly validated.
 
 
