--- a/MeasuringResistance/paper/src/main.tex
+++ b/MeasuringResistance/paper/src/main.tex
@@ -40,7 +40,7 @@
     \section{Abstract}\label{sec:abstract}
         It tends to be pretty difficult and obviously not convenient to perform measurements using voltage and current sensors whose impedance is comparable with the impedance of resistor itself.\newline
         That's why it makes sense to apply optimization methods to improve accuracy.\newline
-        So, we've constructed all of the possible schemes and proved, that there aren't any other reasonable schemes can be constructed using the given set of instruments.\newline
+        So, we've constructed all the possible schemes and proved, that there aren't any other reasonable schemes can be constructed using the given set of instruments.\newline
         Finally, we've extracted all the data from those schemes.\newline
         The task is to measure the impedance of the given resistor as precise as possible.\newline
         To achieve this aim, we decided to perform these operations:\newline
@@ -53,6 +53,8 @@
 
     \end{center}
     \end{vplace}
+
+    \section{}
 
     \newpage
 
