add 5th equation with solving

--- a/MeasuringResistance/paper/src/main.tex
+++ b/MeasuringResistance/paper/src/main.tex
@@ -180,6 +180,24 @@
     \end{equation}
 
 
+    \newpage
+
+    % Scheme 5:
+    \subsection{Scheme 5}\label{subsec:scheme-5}
+
+    \includegraphics[width=\linewidth]{../schemes/Scheme5.png}
+
+    \begin{equation*}
+        A_5 = \frac{\varepsilon}{R + R_\varepsilon + R_V + R_A}
+    \end{equation*}
+    \begin{equation*}
+        R + R_\varepsilon + R_V + R_A = \frac{\varepsilon}{A_5}
+    \end{equation*}
+
+    \begin{equation}\label{eq:equation5}
+        R = \frac{\varepsilon}{A_5} - R_\varepsilon - R_V - R_A
+    \end{equation}
+
 
 %
 %        \begin{minted}[linenos]{c}
